@@ -323,11 +323,17 @@ namespace Combat {
         public IEnumerator AttemptFlee() {
             // partyMembers with higher luck will have a better chance at escaping
             int chance = Random.Range(activePartyMember.LVL + (activePartyMember.LUK / 3 * activePartyMember.LVL), 100) - monsters[0].LVL;
+            List<Monster> monstersToRemove = new List<Monster>();
+
+            // flee chance modifiers
             if (activePartyMember.GetStatusEffect(StatusEffectConstants.TRAP) != -1) {
                 chance += 50;
             }
-
-            List<Monster> monstersToRemove = new List<Monster>();
+            if (activePartyMember.className == ClassConstants.ARCHER) {
+                if (activePartyMember.skills[(int)SkillConstants.archerSkills.FLEETFOOTED].skillEnabled == true) {
+                    chance -= 50;
+                }
+            }
 
             // wait for all monsters to "despawn"
             DisableAllButtons();
