@@ -930,7 +930,7 @@
 		{ "key": "poisonArrow_skill_des", "value": "Physical attack with a high chance to poison" },
 		{ "key": "survivalist_skill_title", "value": "Survivalist" },
 		{ "key": "survivalist_skill_sub", "value": "Passive" },
-		{ "key": "survivalist_skill_des", "value": "Damage from poison and bleed is reduced by 50%" },	
+		{ "key": "survivalist_skill_des", "value": "Damage from poison and bleed is reduced by 100%" },	
 		{ "key": "elvenGift_skill_title", "value": "Elven Gift" },
 		{ "key": "elvenGift_skill_sub", "value": "Active" },
 		{ "key": "elvenGift_skill_des", "value": "Restore HP to a party member and cure them" },		
@@ -954,7 +954,7 @@
 		{ "key": "waxThief_skill_des", "value": "Wax obtained from enemies is increased by 50%" },
 		{ "key": "cloaked_skill_title", "value": "Cloaked" },
 		{ "key": "cloaked_skill_sub", "value": "Passive" },
-		{ "key": "cloaked_skill_des", "value": "Increase DOG by 15 or 15% (whichever is greater)" },
+		{ "key": "cloaked_skill_des", "value": "Increase DOG by 15" },
 		{ "key": "ambusher_skill_title", "value": "Ambusher" },
 		{ "key": "ambusher_skill_sub", "value": "Passive" },
 		{ "key": "ambusher_skill_des", "value": "Gain Advantage for 1 turn whenever an enemy is stunned" },		
